# ableton-mcp

./: CLI_PLAN.md  DEPLOYMENT.md  ableton-cli.py  meter.py  pyproject.toml  server_config.json
AbletonMCP_Remote_Script/: __init__.py
AbletonMCP_Remote_Script/handlers/: __init__.py  arrangement.py  audio.py  automation.py  browser.py  clips.py  devices.py  dispatch.py  midi.py  mixer.py  scenes.py  session.py  tracks.py
MCP_Server/: connection.py  grid_notation.py  server.py
MCP_Server/tools/: __init__.py  arrangement.py  audio.py  browser.py  clips.py  devices.py  midi.py  mixer.py  scenes.py  session.py  tracks.py
cli/: __init__.py  connection.py  main.py  registry.py
cli/commands/: call.py  grep.py  info.py  interactive.py  list_cmd.py
